<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/tvGrey"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Butter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAisleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/aisle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAisle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAisleText"
            app:layout_constraintStart_toEndOf="@+id/tvAisleText"
            app:layout_constraintTop_toTopOf="@+id/tvAisleText"
            tools:text="jemal kakauridze" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConsistencyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/consistency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAisleText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConsistency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvConsistencyText"
            app:layout_constraintStart_toEndOf="@+id/tvConsistencyText"
            app:layout_constraintTop_toTopOf="@+id/tvConsistencyText"
            tools:text="jemal kakauridze" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOriginalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/original"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConsistencyText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvOriginalText"
            app:layout_constraintStart_toEndOf="@+id/tvOriginalText"
            app:layout_constraintTop_toTopOf="@+id/tvOriginalText"
            tools:text="jemal kakauridze" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>